# cyberdog_locomotion

./: .clang-format  .commit-template  .gitignore  CMakeLists.txt  NOTICE.md  README.md  README_en.md  package.xml
common/: CMakeLists.txt
common/config/: cyberdog-ctrl-user-parameters.yaml  cyberdog-description.yaml  cyberdog-spi.yaml  cyberdog2-angular-description.yaml  cyberdog2-angular-spi.yaml  cyberdog2-ctrl-user-parameters.yaml  cyberdog2-description.yaml  cyberdog2-spi.yaml  joints_calibrate_param.yaml  robot-defaults.yaml  simulator-defaults.yaml  speed_calibrate_param_v1.1.yaml
common/include/: c_types.h  control_flags.hpp  control_flags_release.hpp  cpp_types.hpp  parameters.hpp  robot_controller.hpp
common/include/command_interface/: command_interface.hpp  gamepad_command.hpp  rc_command.hpp
common/include/control_parameters/: control_parameter_interface.hpp  control_parameters.hpp
common/include/controllers/: leg_controller.hpp  state_estimator_container.hpp
common/include/dynamics/: actuator_model.hpp  cyberdog.hpp  floating_base_model.hpp  quadruped.hpp  spatial.hpp  spatial_inertia.hpp
common/include/math/: math_utilities.hpp  orientation_tools.hpp
common/include/parameters/: model_parameters.hpp  robot_parameters.hpp
common/include/sim_utilities/: imu_types.hpp  spine_board.hpp  visualization_data.hpp
common/include/utilities/: periodic_task.hpp  segfault_handler.hpp  timer.hpp  toolkit.hpp  utilities.hpp  utilities_print.hpp
common/lcm_type/: CMakeLists.txt
common/lcm_type/lcm/: bms_lcmt.lcm  danger_states_lcmt.lcm  heightmap_t.lcm  localization_lcmt.lcm  make_types.sh  microstrain_lcmt.lcm  motor_ctrl_lcmt.lcm  motor_ctrl_state_lcmt.lcm  new_bms_lcmt.lcm  robot_control_cmd_lcmt.lcm  robot_control_responce_lcmt.lcm  simulator_lcmt.lcm  spi_data_t.lcm  state_estimator_lcmt.lcm  user_gait_file_t.lcm  visualization_lcmt.lcm
common/src/command_interface/: command_interface.cpp
common/src/control_parameters/: control_parameter_interface.cpp  control_parameters.cpp
common/src/controllers/: leg_controller.cpp
common/src/dynamics/: floating_base_model.cpp  quadruped.cpp
common/src/sim_utilities/: spine_board.cpp
common/src/utilities/: periodic_task.cpp  segfault_handler.cpp  utilities.cpp  utilities_print.cpp
control/: CMakeLists.txt
control/include/: robot_runner_Interface.hpp
control/include/control/: cyberdog_controller.hpp  robot_runner.hpp  user_parameters.hpp
control/include/control/balance_controller/: balance_controller_lsm.hpp
control/include/control/convex_mpc/: common_types.hpp  convex_mpc_loco_gaits.hpp  convex_mpc_motion_gaits.hpp  gait.hpp  solve_linear_mpc.hpp  solve_mpc_data_set.hpp  solve_mpc_interface.hpp
control/include/control/estimator/: bat_estimator.hpp  contact_estimator.hpp  footforce_contact_estimator.hpp  new_bat_estimator.hpp  orientation_estimator.hpp  position_velocity_estimator.hpp  terrain_estimator.hpp
control/include/control/fsm_states/: control_fsm.hpp  control_fsm_data.hpp  cpu_mlp.hpp  fsm_state.hpp  fsm_state_balancestand.hpp  fsm_state_forcejump.hpp  fsm_state_jump_3d.hpp  fsm_state_lifted.hpp  fsm_state_locomotion.hpp  fsm_state_motor_ctrl.hpp  fsm_state_passive.hpp  fsm_state_posectrl.hpp  fsm_state_pure_damper.hpp  fsm_state_recoverystand.hpp  fsm_state_rl_rapid.hpp  fsm_state_rl_reset.hpp  fsm_state_two_leg_stand.hpp  robot_current_state.hpp  safety_checker.hpp  transition_data.hpp
control/src/: cyberdog_controller.cpp  robot_runner.cpp  robot_runner_interface.cpp
control/src/balance_controller/: balance_controller_lsm.cpp
control/src/convex_mpc/: convex_mpc_loco_gaits.cpp  convex_mpc_motion_gaits.cpp  gait.cpp  solve_linear_mpc.cpp  solve_mpc_interface.cpp
control/src/estimator/: bat_estimator.cpp  footforce_contact_estimator.cpp  orientation_estimator.cpp  position_velocity_estimator.cpp  terrain_estimator.cpp
control/src/fsm_states/: control_fsm.cpp  fsm_state.cpp  fsm_state_balancestand.cpp  fsm_state_forcejump.cpp  fsm_state_jump_3d.cpp  fsm_state_lifted.cpp  fsm_state_locomotion.cpp  fsm_state_motor_ctrl.cpp  fsm_state_passive.cpp  fsm_state_posectrl.cpp  fsm_state_pure_damper.cpp  fsm_state_recoverystand.cpp  fsm_state_rl_rapid.cpp  fsm_state_rl_reset.cpp  fsm_state_two_leg_stand.cpp  safety_checker.cpp
control/src/offline_optimization_controller/: data_reader.cpp  frontjump_ctrl.cpp  offline_data_ctrl.cpp  prejump_ctrl.cpp
control/src/position_controller/: position_controller.cpp
control/src/trajectory/: body_swing_trajectory.cpp  foot_swing_trajectory.cpp
control/src/wbc_ctrl/: wbc_ctrl.cpp
control/user/: CMakeLists.txt  main.cpp  sub_main.cpp  sub_main.hpp
docker/: Dockerfile  (+2 more)
hardware/: CMakeLists.txt
hardware/include/: hardware_bridge_interface.hpp
hardware/include/hardware/: hardware_bridge.hpp  serial.h
hardware/include/manager/: calc_md5.hpp  execute_command_json.hpp  fork_para_conf_json.hpp  fork_program.hpp  handle_client_initial.hpp  handle_imu_serial_client.hpp  handle_leg_test_client.hpp  handle_ota_client.hpp  libraries.h  manager_parameters.hpp  manager_utils.hpp  parse_json_on_execute_command.hpp  parse_json_on_rork_para_conf.hpp  raw_socket.hpp
hardware/json/: fork_para_conf_lists.json
hardware/src/: hardware_bridge.cpp  hardware_bridge_interface.cpp  manager.cpp  serial.cpp
hardware/src/manager/: calc_md5.cpp  fork_program.cpp  handle_client_initial.cpp  handle_imu_serial_client.cpp  handle_leg_test_client.cpp  handle_ota_client.cpp  parse_json_on_execute_command.cpp  parse_json_on_fork_para_conf.cpp  raw_socket.cpp
hardware/src/rt/: handle_bms_client.cpp  handle_new_board_bms_client.cpp  imu_online_calibrate.cpp  rt_rc_interface.cpp  rt_sbus.cpp  rt_serial.cpp  spi_handler.cpp  spi_handler_for_imu.cpp
hardware/src/utilities/: ComplementaryFilter.cpp  MahonyFilter.cpp  dog_toolkit.cpp  filters.cpp
simbridge/: CMakeLists.txt
simbridge/include/: shared_memory.hpp  simulation_bridge.hpp  simulation_bridge_interface.hpp  simulator_message.hpp
simbridge/src/: simulation_bridge.cpp  simulation_bridge_interface.cpp
(+177 files in other folders)
